--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^16.0.10",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "@types/node": "latest",
+    "@types/react": "latest",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "typescript": "^5.0.0",
-    "@types/react": "latest",
-    "@types/node": "latest"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
